tests/negative/syntax/unknown-escape/err.expected
ERROR:
Invalid escape sequence used at test.smol:5:28-5:30:
         4 |     fn main() Unit {
         5 |         var x String = "foo\q";
           |                            ^^
         6 |     }
